--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>stock-exchange</groupId>
     <artifactId>stock-exchange-be</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <version>0.5-SNAPSHOT</version>
+    <modules>
+        <module>transaction-manager</module>
+    </modules>
 
 
 </project>
